--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css" rel="stylesheet" />
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
   </head>
   <body>
     <noscript>
